[gd_scene load_steps=8 format=3 uid="uid://dy06fpapockt1"]

[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="1_v6k1a"]
[ext_resource type="FontFile" uid="uid://c355n3j7jdkeb" path="res://ui/fonts/PR Viking.ttf" id="2_lu6a0"]
[ext_resource type="AudioStream" uid="uid://bf5lqnuo56nsd" path="res://audio/music/main_menu/Title Song Alternate.wav" id="2_n2157"]
[ext_resource type="StyleBox" uid="uid://ywddocya07iu" path="res://ui/themes/menu_button_normal.tres" id="4_fldqd"]
[ext_resource type="FontFile" uid="uid://djv2v0up1fjqc" path="res://ui/fonts/Swamp Witch.ttf" id="4_ib34s"]
[ext_resource type="StyleBox" uid="uid://bep683xuf5pq0" path="res://ui/themes/menu_button_hover.tres" id="5_5cv1b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjfrw"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6k1a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -3124.0
offset_top = -1785.0
offset_right = 4440.0
offset_bottom = 2488.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hjfrw")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.226
anchor_right = 1.0
anchor_bottom = 0.509
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EldritchEchoesTitle" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_ib34s")
theme_override_font_sizes/font_size = 280
text = "ELDRITCH ECHOES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 9

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(230, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lu6a0")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("4_fldqd")
theme_override_styles/hover = ExtResource("5_5cv1b")
text = "BEGIN"

[node name="Settings" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(230, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lu6a0")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("4_fldqd")
theme_override_styles/hover = ExtResource("5_5cv1b")
text = "SETTINGS"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(230, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lu6a0")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = ExtResource("4_fldqd")
theme_override_styles/hover = ExtResource("5_5cv1b")
text = "QUIT"

[node name="VersionContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -14.0
offset_right = 36.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 5

[node name="VersionNum" type="Label" parent="VersionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lu6a0")
theme_override_font_sizes/font_size = 45
text = "VERSION"

[node name="DeveloperContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_bottom = 5

[node name="AuthorName" type="Label" parent="DeveloperContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lu6a0")
theme_override_font_sizes/font_size = 45
text = "DEVELOPED BY DAVID WALSH"

[node name="MainMenuAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_n2157")
volume_db = -10.0
autoplay = true

[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/GridContainer/Quit" to="." method="_on_quit_button_up"]
